bug: Too big buttons to mobile devices

--- a/src/Component/NavBar/Button.css
+++ b/src/Component/NavBar/Button.css
@@ -48,7 +48,7 @@
   }
 }
 
-@media (max-width: 320px) {
+@media (max-width: 468px) {
   .Button {
     height: 40px;
     width: 80px;
